@@ -1,6 +1,5 @@
 package oogasalad.backend.EndGameTests;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -10,15 +9,17 @@ import oogasalad.GamePlayer.Board.ChessBoard;
 import oogasalad.GamePlayer.Board.EndConditions.EndCondition;
 import oogasalad.GamePlayer.Board.EndConditions.TwoMoves;
 import oogasalad.GamePlayer.Board.Player;
+import oogasalad.GamePlayer.GamePiece.Piece;
+import oogasalad.GamePlayer.GamePiece.PieceData;
 import oogasalad.GamePlayer.Board.TurnCriteria.Linear;
 import oogasalad.GamePlayer.Board.TurnCriteria.TurnCriteria;
 import oogasalad.GamePlayer.EngineExceptions.InvalidMoveException;
 import oogasalad.GamePlayer.EngineExceptions.OutsideOfBoardException;
-import oogasalad.GamePlayer.GameClauses.CheckValidator;
-import oogasalad.GamePlayer.GamePiece.Piece;
-import oogasalad.GamePlayer.GamePiece.PieceData;
+import oogasalad.GamePlayer.ValidStateChecker.Check;
 import oogasalad.GamePlayer.Movement.Coordinate;
 import oogasalad.GamePlayer.Movement.Movement;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -27,31 +28,26 @@ import org.junit.jupiter.api.Test;
  */
 public class CheckTests {
 
-  CheckValidator check;
-  private ChessBoard board;
-  private TurnCriteria turnCriteria;
-  private EndCondition endCondition;
+  private static final Logger LOG = LogManager.getLogger(CheckTests.class);
 
-  private Player playerOne;
-  private Player playerTwo;
-  private Player[] players;
+  Check check;
+  private ChessBoard board;
 
   private Piece pieceOne;
   private Piece pieceTwo;
-  private List<Piece> pieces;
 
   @BeforeEach
   void setUp() {
 
-    playerOne = new Player(0, new int[]{1});
-    playerTwo = new Player(1, new int[]{0});
-    players = new Player[]{playerOne, playerTwo};
+    Player playerOne = new Player(0, new int[]{1});
+    Player playerTwo = new Player(1, new int[]{0});
+    Player[] players = new Player[]{playerOne, playerTwo};
 
-    turnCriteria = new Linear(players);
-    endCondition = new TwoMoves();
+    TurnCriteria turnCriteria = new Linear(players);
+    EndCondition endCondition = new TwoMoves();
     board = new ChessBoard(8, 8, turnCriteria, players, List.of(endCondition));
 
-    check = new CheckValidator();
+    check = new Check();
 
   }
 
@@ -59,15 +55,13 @@ public class CheckTests {
 
     pieceOne = new Piece(new PieceData(new Coordinate(row1, col1),
         "test1", 0, 0, false,
-        List.of(new Movement(List.of(new Coordinate(1, 0)), false)),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(new Movement(List.of(new Coordinate(1, 0)), false)), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""));
 
     pieceTwo = new Piece(new PieceData(new Coordinate(row2, col2),
         "test2", 0, 1, true,
-        List.of(new Movement(List.of(new Coordinate(1, 0)), false)),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(new Movement(List.of(new Coordinate(1, 0)), false)), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""));
 
-    pieces = List.of(pieceOne, pieceTwo);
+    List<Piece> pieces = List.of(pieceOne, pieceTwo);
     board.setPieces(pieces);
   }
 
@@ -77,10 +71,11 @@ public class CheckTests {
   @Test
   void inCheck() throws OutsideOfBoardException {
     pieceLocations(0, 0, 1, 0);
+    LOG.debug(board);
     //TEAM 1 is in check
-    assertTrue(check.isInCheck(board, 1));
+    assertTrue(new Check().isValid(board, 1));
     //Team 2 is NOT in check
-    assertFalse(check.isInCheck(board, 0));
+    assertFalse(new Check().isValid(board, 0));
   }
 
   /**
@@ -89,8 +84,8 @@ public class CheckTests {
   @Test
   void notInCheck() throws OutsideOfBoardException {
     pieceLocations(0, 0, 3, 0);
-    assertFalse(check.isInCheck(board, 0));
-    assertFalse(check.isInCheck(board, 1));
+    assertFalse(new Check().isValid(board, 0));
+    assertFalse(new Check().isValid(board, 1));
   }
 
   /**
@@ -98,16 +93,16 @@ public class CheckTests {
    * it should ever happen (coverage, sad-testing)
    */
   @Test
-  void movesIntoCheck() throws OutsideOfBoardException, InvalidMoveException {
+  void movesIntoCheck() throws OutsideOfBoardException {
     pieceLocations(0, 0, 3, 0);
-    assertFalse(check.isInCheck(board, 1));
+    assertFalse(new Check().isValid(board, 1));
 
     //Can't actually move into check thanks to InvalidMoveException
     try {
-      pieceTwo.move(board.getTile(new Coordinate(1, 0)));
+      pieceTwo.move(board.getTile(new Coordinate(1, 0)), board);
     } catch (InvalidMoveException ignored) {}
 
-    assertFalse(check.isInCheck(board, 1));
+    assertFalse(new Check().isValid(board, 1));
   }
 
   /**
@@ -116,8 +111,8 @@ public class CheckTests {
   @Test
   void movesOutOfCheck() throws OutsideOfBoardException, InvalidMoveException {
     pieceLocations(0, 0, 1, 0);
-    assertTrue(check.isInCheck(board, 1));
-    pieceTwo.move(board.getTile(new Coordinate(2, 0)));
-    assertFalse(check.isInCheck(board, 1));
+    assertTrue(new Check().isValid(board, 1));
+    pieceTwo.move(board.getTile(new Coordinate(2, 0)), board);
+    assertFalse(new Check().isValid(board, 1));
   }
 }
